--- a/scss/_atsu.scss
+++ b/scss/_atsu.scss
@@ -6,7 +6,8 @@
 .current-box{
     width: 80%;
     margin: 0 auto;
-    border: 1px solid black;
+    border: 2px solid black;
+    background-color: rgba(219, 219, 219, 0.174);
     .current-name{
         text-align: center;
         margin: 1rem 0;
