--- a/scss/index.css
+++ b/scss/index.css
@@ -5,7 +5,8 @@
 .current-box {
   width: 80%;
   margin: 0 auto;
-  border: 1px solid black;
+  border: 2px solid black;
+  background-color: rgba(219, 219, 219, 0.174);
 }
 .current-box .current-name {
   text-align: center;
@@ -92,5 +93,11 @@
 * {
   margin: 0;
   padding: 0;
+}
+
+body {
+  background-image: url("https://www.holland.com/upload_mm/d/3/4/68943_fullimage_hollandse%20luchten%20olha%20rohulya%20via%20shutterstock_1150x664.jpg");
+  background-repeat: no-repeat;
+  background-size: 100%;
 }
 /*# sourceMappingURL=index.css.map */
