--- a/scss/_asafe.scss
+++ b/scss/_asafe.scss
@@ -10,12 +10,14 @@
     border: 0.1em solid black ;
     width: 10em;
     padding: 0 auto;
+    background-color: rgba(211, 211, 211, 0.361);
 }
 
 .days-weather {
     border: 0.1em solid black ;
     width: 10em;
     padding: 0 auto;
+    background-color: rgba(211, 211, 211, 0.361);
 }
 
 .weather-icon {
