--- a/scss/index.css
+++ b/scss/index.css
@@ -91,26 +91,28 @@
 }
 
 .continer-flex {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    margin: 2em;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin: 2em;
 }
 
 .hours-weather {
-    border: 0.1em solid black ;
-    width: 10em;
-    padding: 0 auto;
+  border: 0.1em solid black;
+  width: 10em;
+  padding: 0 auto;
+  background-color: rgba(211, 211, 211, 0.361);
 }
 
 .days-weather {
-    border: 0.1em solid black ;
-    width: 10em;
-    padding: 0 auto;
+  border: 0.1em solid black;
+  width: 10em;
+  padding: 0 auto;
+  background-color: rgba(211, 211, 211, 0.361);
 }
 
 .weather-icon {
-    margin-left: 1.5em;
+  margin-left: 1.5em;
 }
 
 * {
