--- a/scss/index.scss
+++ b/scss/index.scss
@@ -10,7 +10,7 @@
 body{
     background-image: url("https://www.holland.com/upload_mm/d/3/4/68943_fullimage_hollandse%20luchten%20olha%20rohulya%20via%20shutterstock_1150x664.jpg");
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: cover;
 }
 
 
