--- a/scss/index.css
+++ b/scss/index.css
@@ -123,6 +123,6 @@
 body {
   background-image: url("https://www.holland.com/upload_mm/d/3/4/68943_fullimage_hollandse%20luchten%20olha%20rohulya%20via%20shutterstock_1150x664.jpg");
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-size: cover;
 }
 /*# sourceMappingURL=index.css.map */
